helm/kafka-ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui
  labels:
    helm.sh/chart: kafka-ui-0.1.0
    app.kubernetes.io/name: kafka-ui
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-additional-resource-tags: "project=mcs,owner=devops"
spec:
  type: ClusterIP
  ports:
    - port: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: kafka-ui
    app.kubernetes.io/instance: release-name
