helm/ingress-rule-kafka-ui.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-ui
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: 
    http:
      paths:
      - path: /kafka/?(.*)
        pathType: Prefix
        backend:
          service:
            name: kafka-ui
            port:
              name: http
