helm/ingress-rule-opsmanager.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:

  name: simple-fanout-example

spec:

  rules:

  - host: 

    http:

      paths:

      - path: /foo

        pathType: Prefix

        backend:

          service:

            name: grafana

            port:

              number: 3000

      - path: /bar

        pathType: Prefix

        backend:

          service:

            name: bbw-dih-spacedeck

            port:

              number: 3000
