helm/ingress-rule-spacedeck.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bbw-dih-spacedeck
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "1024m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "10000"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "10000"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "10000"
    ingress.kubernetes.io/compress-enable: "true"
spec:
  ingressClassName: nginx
  rules:
  - host:
    http:
      paths:
      - backend:
          service:
            name: bbw-dih-spacedeck
            port:
              number: 3000
        path: /spacedeck
        pathType: ImplementationSpecific
  defaultBackend:
    service:
       name: bbw-dih-spacedeck
       port:
         number: 3000
